--- a/ProjetSlamFichier.css
+++ b/ProjetSlamFichier.css
@@ -52,8 +52,8 @@ td{
 
 .FighterPass2{
 	text-align: center;
-	min-height: 244px;
-	min-width: 130px;
+	min-height: 30%;
+	min-width: 20%;
 }
 
 .TextePass1{
